# tweedekamer_opendata

./: .gitignore  .pre-commit-config.yaml  .release-notes-v0.1.1.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  entities.md  getting-started.md  index.md  odata.md  syncfeed.md
examples/: list_active_mps.py  search_moties.py  sync_feed_sample.py
scripts/: generate_models.py
src/tweedekamer/: __init__.py  _http.py  _security.py  client.py  exceptions.py  query.py  syncfeed.py
src/tweedekamer/models/: __init__.py  activiteit.py  base.py  commissie.py  document.py  fractie.py  persoon.py  zaak.py
tests/: conftest.py  test_integration.py  test_query.py  test_security.py  test_syncfeed.py
